--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@imagekit/nodejs": "^7.2.1",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
     "mate": "^0.21.0",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
